Updated meta data and added new favicon.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "SOŠ Strojnícka",
+  "name": "Virtuálna prehliadka strednej odbornej školy strojníckej Bánovce nad Bebravou",
   "icons": [
     {
       "src": "favicon.ico",
