--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
   "name": "sos-strojnicka-bn",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.10",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^12.8.3",
     "leaflet": "^1.7.1",
-    "node-sass": "^5.0.0",
     "panolens": "^0.12.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-leaflet": "^3.1.0",
-    "react-scripts": "4.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
+    "react-scripts": "5.0.1",
+    "sass": "^1.84.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
